# pmmds

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: main.py  middleware.py
apps/api/db/: __init__.py  connection.py  models.py
apps/api/models/: __init__.py  loader.py
apps/api/routes/: __init__.py  health.py  metrics.py  predict.py
apps/api/schemas/: __init__.py  predict.py
apps/monitor/: __init__.py  config.py  db.py  flows.py  service.py
infra/compose/: docker-compose.yml
infra/docker/: api.Dockerfile  mlflow.Dockerfile
infra/sql/: 002_drift_monitoring.sql  003_retraining.sql  004_taxi_migration.sql  init.sql
pipelines/retrain/: __init__.py  comparator.py  db.py  flows.py  service.py
pipelines/train/: __init__.py  preprocessing.py  trainer.py
scripts/: download_data.py  monitor.py  retrain.py  seed_traffic.py  train_model.py
shared/: __init__.py
shared/config/: settings.py
shared/data/: __init__.py  dataset.py  locations.py
shared/drift/: __init__.py  metrics.py
shared/utils/: __init__.py  logging.py  metrics.py
shared/validation/: __init__.py  expectations.py  validator.py
tests/: conftest.py  test_api.py  test_metrics.py  test_smoke.py  test_validation.py
